CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(WT_EXAMPLE)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

#SET (WT_CONNECTOR "wtfcgi" CACHE STRING "Connector used (wthttp or wtfcgi)")
SET(WT_PROJECT_SOURCE nav10.cpp)
ADD_EXECUTABLE(wt_project.wt ${WT_PROJECT_SOURCE})

INCLUDE_DIRECTORIES(/usr/local/include/ )
TARGET_LINK_LIBRARIES(${WT_PROJECT_TARGET} wt)
